canary-test/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-demo
  namespace: canary-test
spec:
  replicas: 1
  strategy:
    canary:
      canaryService: hello-v2
      stableService: hello-v1
      trafficRouting:
        nginx:
          stableIngress: prod-ingress
      steps:
      - setWeight: 5
      - pause: {}
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: rollouts-demo
  template:
    metadata:
      labels:
        app: rollouts-demo
    spec:
      containers:
      - name: rollouts-demo
        image: ghcr.io/kmaster8/hello:v1
        ports:
        - name: http
          containerPort: 5000
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
