canary-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-v1
spec:
  type: ClusterIP
  selector:
    app: rollouts-demo
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: hello-v2
spec:
  type: ClusterIP
  selector:
    app: rollouts-demo
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
